--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: centrum-python-buildbot-mongodb-status
 Section: python
 Priority: optional
 Maintainer: Lukas Linhart <lukas.linhartl@centrumholdings.com>
-Build-Depends: cdbs (>= 0.4.41), debhelper (>= 5.0.37.2), python-dev, python-support (>= 0.3), python-setuptools, centrum-python-setuptoolsdummy
+Build-Depends: cdbs (>= 0.4.41), debhelper (>= 5.0.37.2), python-dev, python-support (>= 0.3), python-setuptools
 Standards-Version: 3.7.2
 
 Package: centrum-python-buildbot-mongodb-status
